  admin-side via config.php. 
* Added: PHPMailer for third-party SMTP delivery. See Admin>Preferences>Mail.
* Added: Multi-edit for changing author language.
* Added: Plugins can be uploaded from a URL by dragging to upload textarea.
* Added: Compiled plugins can be uploaded via Browse... feature.
* Added: Compatible plugin upgrades directly from the Plugins panel.
* Added: Support for aggregate window functions in compatible MySQL versions.
* Added: Trailing slash URL preference.
* Added: File download header preference.
* Added: <txp:(article_)image /> accepts extra attributes (see #1738).
* Added: 'filter' attribute to <txp:section_list /> and <txp:if_section />.
* Changed: Plugins of all types trigger verify step (with improved security).
* Changed: Can no longer delete in-use languages.
* Changed: Less collision-prone custom fields name processing.
* Changed: Do not generate empty syndication feeds for feedless sections.
* Developer: Introduce UI class library for building interface components.
* Developer: Some of the lesser-used tags are loaded on demand from their class
  to save memory. Plugins must call them via processTags() function.
* jQuery 3.6.4.
* Textile 4.0.0. See https://github.com/textile/php-textile/releases/ for full
  list of changes in this release (thanks, gocom).
* PrismJS 1.29.0.

Changes in 4.8.8 (24 Jan 2022)

* Maintenance release with support for PHP 8.1, security enhancements, general
  improvements and bug fixes.
* Security: Fix reported cross-site scripting issue relating to article preview
  CSRF token (many thanks, Paul Ritchie at Pentest Limited).
* Fixed: More robust numeric searches.
* Fixed: Improved query efficiency of category operations.
* Fixed: Required parameters after optional in tag builder (thanks, phiw13).
* Fixed: Admin-side pagination when sorting by non-unique values.
* Added: PHP 8.1 support.
* Added: Natural search mode.
* Added: Random form selection.